test/files/run/splain-tree.check
newSource1.scala:28: error: implicit error;
!I e: tpes.I1
i1a invalid because
!I p: tpes.I2
――i2 invalid because
  !I p: tpes.I3
――――i3a invalid because
    !I p: tpes.I4
――――――i4 invalid because
      !I p: tpes.I5
――――――――i5 invalid because
        !I p: tpes.I6
――――――――――i6a invalid because
          !I p: tpes.I7
――――――――――――i7 invalid because
            !I p: tpes.I8
――――――――――――――i8 invalid because
              !I p: tpes.I9

――――――――――i6b invalid because
          !I p: tpes.I8
――――――――――――i8 invalid because
            !I p: tpes.I9

――――i3b invalid because
    !I p: tpes.I4
――――――i4 invalid because
      !I p: tpes.I5
――――――――i5 invalid because
        !I p: tpes.I6
――――――――――i6a invalid because
          !I p: tpes.I7
――――――――――――i7 invalid because
            !I p: tpes.I8
――――――――――――――i8 invalid because
              !I p: tpes.I9

i1b invalid because
!I p: tpes.I6
――i6a invalid because
  !I p: tpes.I7
――――i7 invalid because
    !I p: tpes.I8
――――――i8 invalid because
      !I p: tpes.I9
  implicitly[I1]
            ^
